--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,8 +6,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 5rem;
+    padding-top: 1rem;
     font-family: 'Montserrat', sans-serif;
+}
+
+.art {
+    width: 100%;
+    height: 100px;
 }
 
 .main h1 {
