--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 .main {
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
+    min-height: 100vh;
     background-color: #1C1E21;
     color: rgb(238, 233, 233);
     display: flex;
